--- a/Lab3/smp-pzpi-23-3-pohorielov-maksym-lab3/includes/footer.phtml
+++ b/Lab3/smp-pzpi-23-3-pohorielov-maksym-lab3/includes/footer.phtml
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+</head>
+<body>
+    <footer>
+    <a href="index.php">Home</a> |
+    <a href="index.php">Products</a> |
+    <a href="cart.php">Cart</a> |
+    <a href="about_us.php">About Us</a>
+</footer>
+</body>
 
