--- a/Lab3/smp-pzpi-23-3-pohorielov-maksym-lab3/includes/header.phtml
+++ b/Lab3/smp-pzpi-23-3-pohorielov-maksym-lab3/includes/header.phtml
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Simple Shop</title>
+</head>
+<body>
+    <header>
+    <nav class="nav-flex">
+        <div class="nav-left">
+            <a href="index.php">Home</a>
+        </div>
+        <div class="nav-center">
+            <span class="separator">|</span>
+            <a href="products.php">Products</a>
+            <span class="separator">|</span>
+        </div>
+        <div class="nav-right">
+            <a href="cart.php">Cart</a>
+        </div>
+    </nav>
+</header>
+</body>
